<resources>
    <string name="app_name">SignIn</string>

    <string name="id">아이디</string>
    <string name="id_hint">아이디를 입력하세요.</string>

    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>

    <string name="name">이름</string>
    <string name="name_hint">이름을 입력하세요.</string>

    <string name="signin">로그인</string>
    <string name="signup">회원가입</string>

    <string name="finish">종료</string>

</resources>