<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/signIn_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/android"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/signIn_id_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        style="@style/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/signIn_imageView"/>
    <EditText
        android:id="@+id/signIn_id_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/signIn_id_textView"
        android:hint="@string/id_hint"/>

    <TextView
        android:id="@+id/signIn_pw_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        style="@style/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/signIn_id_editText"/>
    <EditText
        android:id="@+id/signIn_pw_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        style="@style/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/signIn_pw_TextView"/>

    <Button
        android:id="@+id/signIn_btn_signIn"
        style="@style/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintTop_toBottomOf="@+id/signIn_pw_EditText" />
    <Button
        android:id="@+id/signIn_btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        style="@style/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/signIn_btn_signIn"/>


</androidx.constraintlayout.widget.ConstraintLayout>